[package]
name = "raydium-2d"
version = "0.1.0"
edition = "2021"

[lib]
name = "raydium"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
smol = "2.0.0"
thiserror = "1.0.56"
wgpu = "0.18.0"
raw-window-handle = "0.6.0"
console_log = "1.0.0"
wasm-bindgen = "0.2.89"
winit = { version = "0.29.8", features = ["rwh_05"] }
sdl2 = { version = "0.36.0", features = ["raw-window-handle", "unsafe_textures", "bundled", "static-link"] }
encase = { version = "0.7.0", features = ["nalgebra"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
nalgebra-glm = "0.18.0"

